data/all_generated_tests/raw_wast_tests/nop_InvalidorInconsistentControlFlowGraph_554.wast
;; 5. **Multiple Consecutive `nop` Instructions**:    - Include multiple consecutive `nop` instructions in the middle of function sequences and validate the CFG's response to control flow continuity.    - Constraint: Tests if consecutive `nop` maintains the uninterrupted flow without CFG deviation.

(assert_invalid
  (module (func (nop) (nop) (nop) (nop) (nop) (nop) (nop) (nop) (nop) (nop) (nop)))
  "multiple consecutive nops without impact"
)